<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Сумма ипотеки textInputLayoutSum-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/mortgage_start_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditSum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_currency_ruble_24"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Дата выдачи ипотеки textInputLayoutDate-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/mortgage_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSum">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_outline_calendar_month_24"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--День оплаты textInputLayoutDayOfPayment-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDayOfPayment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/mortgage_start_payment_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditDayOfPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24_violet_611888"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Срок ипотеки textInputLayoutYearsOfMortgage-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutYearsOfMortgage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/start_years_of_mortgage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDayOfPayment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditYearsOfMortgage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_hourglass_top_24"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Процентная ставка textInputLayoutPercentOfMortgage-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPercentOfMortgage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/percent_of_mortgage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutYearsOfMortgage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditPercentOfMortgage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Подтвердить данные buttonAcceptData-->
    <Button
        android:id="@+id/buttonAcceptData"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPercentOfMortgage" />

</androidx.constraintlayout.widget.ConstraintLayout>